[package]
name = "qemucomm"
version = "0.1.0"
authors = ["arcnmx"]
edition = "2021"

description = "An interface to QEMU QMP and guest agent"
repository = "https://github.com/arcnmx/qemucomm"
readme = "src/README.md"
license = "MIT"

include = [
	"/src/**",
	"/README*",
	"/COPYING*",
]

[dependencies]
qapi = { version = "0.13", features = ["qmp", "qga", "async-tokio-all"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "time", "io-std"] }
bytes = "1"
serde = "1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
inotify = "0.10"
async-ctrlc = { version = "1", features = ["stream"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
